--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection("work"))
       <header class="hero">
         <Hero
           title="Welcome to Supanaut!"
-          tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+          tagline="We care about your wellness."
           align="start"
         >
           <div class="roles">
