--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,13 @@
 ---
-import Hero from '../components/Hero.astro';
-import BaseLayout from '../layouts/BaseLayout.astro';
+import Hero from "../components/Hero.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title="Not Found" description="404 Error — this page was not found">
-	<Hero title="Page Not Found" tagline="Not found" />
+  <Hero title="Page Not Found" tagline="Not found" />
 </BaseLayout>
+
+<!-- <video width="480" height="620" autoplay muted loop playsinline>
+          <source src="/assets/Love6.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video> -->
