--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,98 +21,152 @@ const projects = (await getCollection("work"))
   .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
   .slice(0, 4);
 
+const steps = [
+  {
+    title: "Explore Activities",
+    description: "Browse our curated list of wellness activities.",
+  },
+  {
+    title: "Get in Touch",
+    description: "Send us a message or book a call to discuss your needs.",
+  },
+  {
+    title: "Curated Wellness Events",
+    description:
+      "We'll organize and deliver customized wellness events at your organization.",
+  },
+];
+
 // Full Astro Component Syntax:
 // https://docs.astro.build/basics/astro-components/
 ---
 
 <BaseLayout>
+  <div
+    class="video-container"
+    style="position: relative; width: 100%; height: 100%;"
+  >
+    <video
+      width="1900"
+      height="1000"
+      autoplay
+      muted
+      loop
+      playsinline
+      style="width: 100%; height: auto;"
+    >
+      <!-- <video width="1900" height="1000" autoplay muted loop playsinline> -->
+      <source src="/assets/Home_Video.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <!-- Heading Overlay -->
+    <h1
+      class="video-heading"
+      style="
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 4rem;
+      text-align: center;
+      z-index: 1;"
+    >
+      Welcome to Supanaut!
+    </h1>
+  </div>
+
   <div class="stack gap-20 lg:gap-48">
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
-        <Hero
+        <!-- <Hero
           title="Welcome to Supanaut!"
           tagline="We care about your wellness."
           align="start"
-        >
-          <div class="roles">
+        > -->
+        <!-- <div class="roles">
             <Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
             <Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
             <Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
-          </div>
-        </Hero>
+          </div> -->
+      </header>
 
-        <img
+      <!-- <img
           alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
           width="480"
           height="620"
           src="/assets/portrait.jpg"
-        />
-      </header>
-
-      <Skills />
+        /> -->
+      <!-- <video width="2000" height="1000" autoplay muted loop playsinline>
+          <source src="/assets/Love6.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video> -->
     </div>
 
-    <main class="wrapper stack gap-20 lg:gap-48">
-      <section class="section with-background with-cta">
-        <header class="section-header stack gap-2 lg:gap-4">
-          <h3>Selected Work</h3>
-          <p>
-            Take a look below at some of my featured work for clients from the
-            past few years.
-          </p>
-        </header>
-
-        <div class="gallery">
-          <Grid variant="offset">
-            {
-              projects.map((project) => (
-                <li>
-                  <PortfolioPreview project={project} />
-                </li>
-              ))
-            }
-          </Grid>
-        </div>
-
-        <div class="cta">
-          <CallToAction href="/work/">
-            View All
-            <Icon icon="arrow-right" size="1.2em" />
-          </CallToAction>
-        </div>
-      </section>
-
-      <section class="section with-background bg-variant">
-        <header class="section-header stack gap-2 lg:gap-4">
-          <h3>Mentions</h3>
-          <p>
-            I have been fortunate enough to receive praise for my work in
-            several publications. Take a look below to learn more.
-          </p>
-        </header>
-
-        <div class="gallery">
-          <Grid variant="small">
-            {
-              [
-                "Medium",
-                "BuzzFeed",
-                "The Next Web",
-                "awwwards.",
-                "TechCrunch",
-              ].map((brand) => (
-                <li class="mention-card">
-                  <p>{brand}</p>
-                </li>
-              ))
-            }
-          </Grid>
-        </div>
-      </section>
-    </main>
-
-    <ContactCTA />
+    <!-- <Skills /> -->
   </div>
+  <br />
+  <br />
+
+  <main class="wrapper stack gap-20 lg:gap-48">
+    <section class="section with-background with-cta">
+      <header class="section-header stack gap-2 lg:gap-4">
+        <h3>Services</h3>
+        <p>
+          We offer employee wellness workshops, events and coaching programmes.
+        </p>
+      </header>
+
+      <div class="gallery">
+        <Grid variant="offset">
+          {
+            projects.map((project) => (
+              <li>
+                <PortfolioPreview project={project} />
+              </li>
+            ))
+          }
+        </Grid>
+      </div>
+
+      <div class="cta">
+        <CallToAction href="/work/">
+          View All
+          <Icon icon="arrow-right" size="1.2em" />
+        </CallToAction>
+      </div>
+    </section>
+
+    <section class="section with-background bg-variant">
+      <header class="section-header stack gap-2 lg:gap-4">
+        <h3>How It Works ?</h3>
+        <p>
+          I have been fortunate enough to receive praise for my work in several
+          publications. Take a look below to learn more.
+        </p>
+      </header>
+
+      <div class="gallery">
+        <Grid variant="small">
+          {
+            [
+              "  1. Explore Activities: Browse our curated list of wellness activities.",
+              "  2. Get in Touch: Send us a message or book a call to discuss your needs.",
+              "  3. Wellness Events: We’ll organize and deliver customized wellness events at your organization",
+            ].map((brand) => (
+              <li class="mention-card">
+                <p>{brand}</p>
+              </li>
+            ))
+          }
+        </Grid>
+      </div>
+    </section>
+  </main>
+  <br />
+  <br />
+
+  <ContactCTA />
 </BaseLayout>
 
 <style>
@@ -242,6 +296,19 @@ const projects = (await getCollection("work"))
   .mention-card {
     display: flex;
     height: 7rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 1px solid var(--gray-800);
+    border-radius: 1.5rem;
+    color: var(--gray-300);
+    background: var(--gradient-subtle);
+    box-shadow: var(--shadow-sm);
+  }
+
+  .mention-card2 {
+    height: 7rem;
+    width: 20rem;
     justify-content: center;
     align-items: center;
     text-align: center;
