--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,21 +97,16 @@ const steps = [
           height="620"
           src="/assets/portrait.jpg"
         /> -->
-      <!-- <video width="2000" height="1000" autoplay muted loop playsinline>
-          <source src="/assets/Love6.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video> -->
     </div>
 
-    <!-- <Skills /> -->
+    <Skills />
+    <br />
   </div>
-  <br />
-  <br />
 
   <main class="wrapper stack gap-20 lg:gap-48">
     <section class="section with-background with-cta">
       <header class="section-header stack gap-2 lg:gap-4">
-        <h3>Services</h3>
+        <h3>Our Services</h3>
         <p>
           We offer employee wellness workshops, events and coaching programmes.
         </p>
@@ -140,10 +135,10 @@ const steps = [
     <section class="section with-background bg-variant">
       <header class="section-header stack gap-2 lg:gap-4">
         <h3>How It Works ?</h3>
-        <p>
+        <!-- <p>
           I have been fortunate enough to receive praise for my work in several
           publications. Take a look below to learn more.
-        </p>
+        </p> -->
       </header>
 
       <div class="gallery">
