--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,120 +1,167 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-import ContactCTA from '../components/ContactCTA.astro';
-import Hero from '../components/Hero.astro';
+import ContactCTA from "../components/ContactCTA.astro";
+import Hero from "../components/Hero.astro";
 ---
 
-<BaseLayout title="About | Jeanine White" description="About Jeanine White Lorem Ipsum">
-	<div class="stack gap-20">
-		<main class="wrapper about">
-			<Hero
-				title="About"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
-			>
-				<img
-					width="1553"
-					height="873"
-					src="/assets/at-work.jpg"
-					alt="Jeanine White at work with a colleague"
-				/>
-			</Hero>
+<BaseLayout
+  title="About | Jeanine White"
+  description="About Jeanine White Lorem Ipsum"
+>
+  <div class="stack gap-20">
+    <main class="wrapper about">
+      <Hero title="About">
+        <img
+          width="1553"
+          height="873"
+          src="/assets/About us.jpg"
+          alt="Jeanine White at work with a colleague"
+        />
+      </Hero>
 
-			<section>
-				<h2 class="section-title">Background</h2>
-				<div class="content">
-					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
-					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
-					</p>
-				</div>
-			</section>
-			<section>
-				<h2 class="section-title">Education</h2>
-				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
-				</div>
-			</section>
-			<section>
-				<h2 class="section-title">Skills</h2>
-				<div class="content">
-					<p>officia unde omnis</p>
-				</div>
-			</section>
-		</main>
+      <section>
+        <h2 class="section-title"></h2>
+        <div class="content">
+          <p>
+            Welcome to Supanaut, where we believe that thriving employees create
+            thriving workplaces. We’re on a mission to empower companies to
+            invest in the well-being of their teams by providing holistic,
+            engaging, and transformative wellness events and workshops. Our
+            approach is rooted in the understanding that wellness is
+            multifaceted—it encompasses physical, mental, and emotional health,
+            and it’s crucial for building a sustainable and productive
+            workforce.
+          </p>
+          <br />
+          <p>
+            At Supanaut, we design and deliver a diverse range of programs that
+            focus on every aspect of well-being, from breathwork and nutrition
+            to meditation, movement, and productivity workshops. Our offerings
+            include sessions on stress management, sleep health, and posture, as
+            well as unique experiences like sound baths, creative workshops, and
+            team-focused social activities. Each of our programs is tailored to
+            meet the unique needs of your employees, fostering a culture of
+            care, resilience, and community within your organization.
+          </p>
+          <br />
 
-		<ContactCTA />
-	</div>
+          <p>
+            Our team is composed of experienced wellness experts, coaches, and
+            facilitators passionate about making a positive impact. We are
+            committed to creating spaces where employees can relax, recharge,
+            and reconnect with their potential, both personally and
+            professionally.
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2 class="section-title">About the Founder</h2>
+        <div class="wrapper about">
+          <img
+            width="1400"
+            height="500"
+            src="/assets/About Founder.png"
+            alt="Jeanine White at work with a colleague"
+          />
+        </div>
+
+        <div class="content">
+          <p style="margin-left: 300px; ; font-size: 27px; color: white;">
+            <b>Rekha Mathew</b>
+          </p>
+          <br />
+          <p>
+            Our founder’s journey began in competitive gymnastics and dance,
+            competing at both national and international levels. With a
+            deep-rooted passion for understanding human performance, she was
+            awarded a prestigious British Council Scholarship to pursue a
+            Master’s in Sports and Exercise Science in the UK. This education,
+            combined with her certifications as a 200-hour Ashtanga Yoga Teacher
+            from Ashtanga Yoga Mysore (India), has given her a unique
+            perspective on enhancing holistic well-being through exercise
+            science, meditation, nutrition and recovery. With a passion for
+            technology, she has also developed digital products tailored for
+            athletes and health enthusiasts to enhance their training and
+            optimize health.
+          </p>
+          <br />
+          <p>
+            With years of experience in multinational corporations, our founder
+            understands the demands and pressures of the modern workplace. Her
+            firsthand experience with stress and burnout drives her mission to
+            create corporate wellness solutions that make a tangible difference.
+            Her vision is to empower individuals to bring their best selves to
+            work every day.
+          </p>
+        </div>
+      </section>
+      <!-- <section>
+        <h2 class="section-title">Skills</h2>
+        <div class="content">
+          <p>officia unde omnis</p>
+        </div>
+      </section> -->
+    </main>
+
+    <ContactCTA />
+  </div>
 </BaseLayout>
 
 <style>
-	.about {
-		display: flex;
-		flex-direction: column;
-		gap: 3.5rem;
-	}
+  .about {
+    display: flex;
+    flex-direction: column;
+    gap: 3.5rem;
+  }
 
-	img {
-		margin-top: 1.5rem;
-		border-radius: 1.5rem;
-		box-shadow: var(--shadow-md);
-	}
+  img {
+    margin-top: 1.5rem;
+    border-radius: 1.5rem;
+    box-shadow: var(--shadow-md);
+  }
 
-	section {
-		display: flex;
-		flex-direction: column;
-		gap: 0.5rem;
-		color: var(--gray-200);
-	}
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    color: var(--gray-200);
+  }
 
-	.section-title {
-		grid-column-start: 1;
-		font-size: var(--text-xl);
-		color: var(--gray-0);
-	}
+  .section-title {
+    grid-column-start: 1;
+    font-size: var(--text-xl);
+    color: var(--gray-0);
+  }
 
-	.content {
-		grid-column: 2 / 4;
-	}
+  .content {
+    grid-column: 2 / 4;
+  }
 
-	.content :global(a) {
-		text-decoration: 1px solid underline transparent;
-		text-underline-offset: 0.25em;
-		transition: text-decoration-color var(--theme-transition);
-	}
+  .content :global(a) {
+    text-decoration: 1px solid underline transparent;
+    text-underline-offset: 0.25em;
+    transition: text-decoration-color var(--theme-transition);
+  }
 
-	.content :global(a:hover),
-	.content :global(a:focus) {
-		text-decoration-color: currentColor;
-	}
+  .content :global(a:hover),
+  .content :global(a:focus) {
+    text-decoration-color: currentColor;
+  }
 
-	@media (min-width: 50em) {
-		.about {
-			display: grid;
-			grid-template-columns: 1fr 60% 1fr;
-		}
+  @media (min-width: 50em) {
+    .about {
+      display: grid;
+      grid-template-columns: 1fr 60% 1fr;
+    }
 
-		.about > :global(:first-child) {
-			grid-column-start: 2;
-		}
+    .about > :global(:first-child) {
+      grid-column-start: 2;
+    }
 
-		section {
-			display: contents;
-			font-size: var(--text-lg);
-		}
-	}
+    section {
+      display: contents;
+      font-size: var(--text-lg);
+    }
+  }
 </style>
