--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,3 +11,16 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           <source src="/assets/Love6.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video> -->
+<!-- 
+        <h3>What We Do</h3>
+        <p style="font-size: 1.3rem;">
+          We promote the holistic growth of your employees, enhancing well-being in
+          every area of life. <br /><br />Our programs bring energy, harmony, and
+          fulfillment to the workplace, helping your team thrive both personally and
+          professionally. <br /><br />
+          <b>Empower your team with a workplace that values their well-being!</b>
+          <br />
+        </p> -->
+
+<!-- max-width: 85rem;
+        align-self: center; -->
