--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -4,32 +4,41 @@ import Icon from "./Icon.astro";
 
 <section class="box skills">
   <div class="stack gap-2 lg:gap-4">
-    <!-- <Icon
-      icon="terminal-window"
+    <Icon icon="heart" color="var(--accent-regular)" size="2.5rem" gradient />
+    <h2>Holistic Wellbeing</h2>
+    <p>
+      We promote the holistic growth of your employees, enhancing well-being in
+      every area of life.
+    </p>
+  </div>
+
+  <div class="stack gap-2 lg:gap-4">
+    <Icon
+      icon="moon-stars"
       color="var(--accent-regular)"
       size="2.5rem"
       gradient
-    /> -->
-    <h3>What We Do</h3>
-    <p style="font-size: 1.3rem;">
-      We promote the holistic growth of your employees, enhancing well-being in
-      every area of life. <br /><br />Our programs bring energy, harmony, and
-      fulfillment to the workplace, helping your team thrive both personally and
-      professionally. <br /><br />
-      <b>Empower your team with a workplace that values their well-being!</b>
-      <br />
+    />
+    <h2>Balance</h2>
+    <p>
+      Our programs bring energy, harmony, and fulfillment to the workplace,
+      helping your team thrive both personally and professionally.
     </p>
   </div>
-  <!-- <div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
-	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
-	</div> -->
+
+  <div class="stack gap-2 lg:gap-4">
+    <Icon
+      icon="empower-logo"
+      color="var(--accent-regular)"
+      size="2.5rem"
+      gradient
+    />
+    <h2>Empower</h2>
+    <p>
+      We enable you to empower your team with a workplace that values their
+      well-being.
+    </p>
+  </div>
 </section>
 
 <style>
@@ -39,8 +48,6 @@ import Icon from "./Icon.astro";
     padding: 1.5rem;
     background-color: var(--gray-999_40);
     box-shadow: var(--shadow-sm);
-    max-width: 85rem;
-    align-self: center;
   }
 
   .skills {
@@ -65,7 +72,7 @@ import Icon from "./Icon.astro";
 
     .skills {
       display: grid;
-      grid-template-columns: repeat(1, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       gap: 5rem;
     }
 
