brand name change

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,9 +24,9 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title"></h2>
         <div class="content">
           <p>
-            Welcome to Supanaut, where we believe that thriving employees create
-            thriving workplaces. We’re on a mission to empower companies to
-            invest in the well-being of their teams by providing holistic,
+            Welcome to WellJourn, where we believe that thriving employees
+            create thriving workplaces. We’re on a mission to empower companies
+            to invest in the well-being of their teams by providing holistic,
             engaging, and transformative wellness events and workshops. Our
             approach is rooted in the understanding that wellness is
             multifaceted—it encompasses physical, mental, and emotional health,
@@ -35,7 +35,7 @@ import Hero from "../components/Hero.astro";
           </p>
           <br />
           <p>
-            At Supanaut, we design and deliver a diverse range of programs that
+            At WellJourn, we design and deliver a diverse range of programs that
             focus on every aspect of well-being, from breathwork and nutrition
             to meditation, movement, and productivity workshops. Our offerings
             include sessions on stress management, sleep health, and posture, as
@@ -67,9 +67,7 @@ import Hero from "../components/Hero.astro";
         </div>
 
         <div class="content">
-          <p style="margin-left: 300px; ; font-size: 27px; color: white;">
-            <b>Rekha Mathew</b>
-          </p>
+          <h4 style="margin-left: 260px;">Rekha Mathew</h4>
           <br />
           <p>
             Our founder’s journey began in competitive gymnastics and dance,
@@ -96,16 +94,16 @@ import Hero from "../components/Hero.astro";
           </p>
         </div>
       </section>
-      <!-- <section>
+    </main>
+    <!-- <section>
         <h2 class="section-title">Skills</h2>
         <div class="content">
           <p>officia unde omnis</p>
         </div>
       </section> -->
-    </main>
-
-    <ContactCTA />
   </div>
+
+  <ContactCTA />
 </BaseLayout>
 
 <style>
