--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -16,16 +16,7 @@ const iconLinks: {
   href: string;
   icon: keyof typeof iconPaths;
 }[] = [
-  { label: "Twitter", href: "https://twitter.com/me", icon: "twitter-logo" },
-  { label: "Twitch", href: "https://twitch.tv/me", icon: "twitch-logo" },
-  { label: "GitHub", href: "https://github.com/me", icon: "github-logo" },
-  { label: "CodePen", href: "https://codepen.io/me", icon: "codepen-logo" },
-  { label: "dribbble", href: "https://dribbble.com/me", icon: "dribbble-logo" },
-  {
-    label: "YouTube",
-    href: "https://www.youtube.com/@me/",
-    icon: "youtube-logo",
-  },
+  { label: "Linkedin", href: "https://twitter.com/me", icon: "linkedin-logo" },
 ];
 ---
 
@@ -33,12 +24,12 @@ const iconLinks: {
   <div class="menu-header">
     <a href="/" class="site-title">
       <Icon
-        icon="lightning-logo"
+        icon="paper-plane-tilt"
         color="var(--accent-regular)"
         size="1.6em"
         gradient
       />
-      Supanaut
+      WellJourn
     </a>
     <menu-button>
       <template>
