--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,12 +68,26 @@ const steps = [
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
-      font-size: 4rem;
+      font-size: 3.5rem;
       text-align: center;
       z-index: 1;"
     >
-      Welcome to Supanaut!
+      Welcome to WellJourn!
     </h1>
+    <!-- <h3
+      class="video-heading"
+      style="
+    position: absolute;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    z-index: 1;"
+    >
+      Your wellness chapter starts here
+    </h3> -->
   </div>
 
   <div class="stack gap-20 lg:gap-48">
