--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title"></h2>
         <div class="content">
           <p>
-            Welcome to WellJourn, where we believe that thriving employees
+            Welcome to Well-Journ, where we believe that thriving employees
             create thriving workplaces. We’re on a mission to empower companies
             to invest in the well-being of their teams by providing holistic,
             engaging, and transformative wellness events and workshops. Our
@@ -35,14 +35,14 @@ import Hero from "../components/Hero.astro";
           </p>
           <br />
           <p>
-            At WellJourn, we design and deliver a diverse range of programs that
-            focus on every aspect of well-being, from breathwork and nutrition
-            to meditation, movement, and productivity workshops. Our offerings
-            include sessions on stress management, sleep health, and posture, as
-            well as unique experiences like sound baths, creative workshops, and
-            team-focused social activities. Each of our programs is tailored to
-            meet the unique needs of your employees, fostering a culture of
-            care, resilience, and community within your organization.
+            At Well-Journ, we design and deliver a diverse range of programs
+            that focus on every aspect of well-being, from breathwork and
+            nutrition to meditation, movement, and productivity workshops. Our
+            offerings include sessions on stress management, sleep health, and
+            posture, as well as unique experiences like sound baths, creative
+            workshops, and team-focused social activities. Each of our programs
+            is tailored to meet the unique needs of your employees, fostering a
+            culture of care, resilience, and community within your organization.
           </p>
           <br />
 
