welljourn header change

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -29,7 +29,7 @@ const iconLinks: {
         size="1.6em"
         gradient
       />
-      WellJourn
+      Well-Journ
     </a>
     <menu-button>
       <template>
