brnad name change to well journ

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title"></h2>
         <div class="content">
           <p>
-            Welcome to Well-Journ, where we believe that thriving employees
+            Welcome to Well Journ, where we believe that thriving employees
             create thriving workplaces. We’re on a mission to empower companies
             to invest in the well-being of their teams by providing holistic,
             engaging, and transformative wellness events and workshops. Our
@@ -35,7 +35,7 @@ import Hero from "../components/Hero.astro";
           </p>
           <br />
           <p>
-            At Well-Journ, we design and deliver a diverse range of programs
+            At Well Journ, we design and deliver a diverse range of programs
             that focus on every aspect of well-being, from breathwork and
             nutrition to meditation, movement, and productivity workshops. Our
             offerings include sessions on stress management, sleep health, and
