--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ const steps = [
       text-align: center;
       z-index: 1;"
     >
-      Welcome to Well-Journ!
+      Welcome to Well Journ!
     </h1>
     <!-- <h3
       class="video-heading"
