--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -42,3 +42,18 @@ const iconLinks: {
     icon: "youtube-logo",
   },
 ]; -->
+
+<!-- <h3
+      class="video-heading"
+      style="
+    position: absolute;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    z-index: 1;"
+    >
+      Your wellness chapter starts here
+    </h3> -->
