--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -9,6 +9,18 @@ import Icon from "./Icon.astro";
     Send us a Message
     <Icon icon="paper-plane-tilt" size="1.2em" />
   </CallToAction>
+  <!-- <form action="/submit-form" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required />
+    <br />
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required />
+    <br />
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+    <br />
+    <button type="submit">Submit</button>
+  </form> -->
 </aside>
 
 <style>
