--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -16,7 +16,11 @@ const iconLinks: {
   href: string;
   icon: keyof typeof iconPaths;
 }[] = [
-  { label: "Linkedin", href: "https://twitter.com/me", icon: "linkedin-logo" },
+  {
+    label: "Linkedin",
+    href: "https://www.linkedin.com/company/well-journ",
+    icon: "linkedin-logo",
+  },
 ];
 ---
 
