--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -7,8 +7,8 @@ import Icon from "./Icon.astro";
     <Icon icon="heart" color="var(--accent-regular)" size="2.5rem" gradient />
     <h2>Holistic Wellbeing</h2>
     <p>
-      We promote the holistic growth of your employees, enhancing well-being in
-      every area of life.
+      We promote your holistic growth, enhancing well-being in every area of
+      life.
     </p>
   </div>
 
@@ -22,7 +22,7 @@ import Icon from "./Icon.astro";
     <h2>Balance</h2>
     <p>
       Our programs bring energy, harmony, and fulfillment to the workplace,
-      helping your team thrive both personally and professionally.
+      helping you thrive both personally and professionally.
     </p>
   </div>
 
@@ -35,8 +35,7 @@ import Icon from "./Icon.astro";
     />
     <h2>Empower</h2>
     <p>
-      We enable you to empower your team with a workplace that values their
-      well-being.
+      We empower you with a workplace that values work and well-being equally.
     </p>
   </div>
 </section>
@@ -68,6 +67,8 @@ import Icon from "./Icon.astro";
     .box {
       border-radius: 1.5rem;
       padding: 2.5rem;
+      max-width: 1500px;
+      margin: 0 auto;
     }
 
     .skills {
