--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -21,7 +21,7 @@ const projects = (await getCollection("work")).sort(
     <main class="wrapper stack gap-8">
       <Hero
         title="Our Services"
-        tagline="See below our employee wellness workshops, events and coaching programmes."
+        tagline="See below our wellness workshops, events and coaching programmes."
         align="start"
       />
       <Grid variant="offset">
