--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -59,15 +59,17 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title">About the Founder</h2>
         <div class="wrapper about">
           <img
-            width="1400"
-            height="500"
+            width="600"
+            height="300"
             src="/assets/About Founder.png"
             alt="Jeanine White at work with a colleague"
           />
         </div>
 
         <div class="content">
-          <h4 style="margin-left: 260px;">Rekha Mathew</h4>
+          <!-- <h4 style="margin-left: 50px;">Rekha Mathew</h4> -->
+          <h4>Rekha Mathew</h4>
+
           <br />
           <p>
             Our founder’s journey began in competitive gymnastics and dance,
@@ -94,6 +96,7 @@ import Hero from "../components/Hero.astro";
           </p>
         </div>
       </section>
+      <br />
     </main>
     <!-- <section>
         <h2 class="section-title">Skills</h2>
@@ -134,6 +137,7 @@ import Hero from "../components/Hero.astro";
 
   .content {
     grid-column: 2 / 4;
+    text-align: justify;
   }
 
   .content :global(a) {
@@ -149,7 +153,7 @@ import Hero from "../components/Hero.astro";
 
   @media (min-width: 50em) {
     .about {
-      display: grid;
+      /* display: grid; */
       grid-template-columns: 1fr 60% 1fr;
     }
 
