--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,20 +74,6 @@ const steps = [
     >
       Welcome to Well Journ!
     </h1>
-    <!-- <h3
-      class="video-heading"
-      style="
-    position: absolute;
-    top: 57%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 3rem;
-    text-align: center;
-    z-index: 1;"
-    >
-      Your wellness chapter starts here
-    </h3> -->
   </div>
 
   <div class="stack gap-20 lg:gap-48">
@@ -112,6 +98,9 @@ const steps = [
           src="/assets/portrait.jpg"
         /> -->
     </div>
+    <h3 class="container">
+      At Well Journ, we take care of your well-being at work.
+    </h3>
 
     <Skills />
     <br />
@@ -121,9 +110,7 @@ const steps = [
     <section class="section with-background with-cta">
       <header class="section-header stack gap-2 lg:gap-4">
         <h3>Our Services</h3>
-        <p>
-          We offer employee wellness workshops, events and coaching programmes.
-        </p>
+        <p>We offer wellness workshops, events and coaching programmes.</p>
       </header>
 
       <div class="gallery">
@@ -266,6 +253,10 @@ const steps = [
     font-size: var(--text-2xl);
   }
 
+  .container {
+    /* parent element of h3 */
+    text-align: center;
+  }
   @media (min-width: 50em) {
     .section {
       grid-template-columns: repeat(4, 1fr);
